--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </div>
 
     <div class="card">
-        <img src="images/img1.webp" alt="">
+        <img src="images/moradi.jpg" alt="">
         <h3>رضا مرادی</h3>
         <p>منشی</p>
         <div class="icons">
@@ -284,7 +284,7 @@
     </div>
 
     <div class="card">
-        <img src="images/img1.webp" alt="">
+        <img src="images/hasan poor.jpg" alt="">
         <h3>حسین حسن پور</h3>
         <p>کار پرداز</p>
         <div class="icons">
@@ -297,7 +297,7 @@
 
 
     <div class="card">
-        <img src="images/img1.webp" alt="">
+        <img src="images/sepahvand.jpg" alt="">
         <h3>محمد سپهوند</h3>
         <p>رییس کمیسیون تربیتی پرورشی</p>
         <div class="icons">
@@ -373,7 +373,7 @@
         </div>
     
         <div class="card">
-            <img src="images/img1.webp" alt="">
+            <img src="images/dalvand.jpg" alt="">
             <h3>فاطمه دالوند</h3>
             <p>منشی</p>
             <div class="icons">
@@ -452,7 +452,7 @@
     </div>
 
     <div class="form-container" style="text-align: right;">
-        <form action="">
+        <form action="email.php" method="post">
             <input type="text" placeholder="نام و نام خانوادگی">
 
             <input type="text" list="data" placeholder="شهرستان">
