--- a/coming soon/index.html
+++ b/coming soon/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>صفحه در دست ساخت دریافت شده از وب روبیک</title>
+		<title>شهرستان و مناطق</title>
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
@@ -13,8 +13,8 @@
 			<div class="inner-content">
 				<div class="construction"></div>
 				<br><br>
-				<h1>وب سایت در دست ساخت است!</h1>
-				<h2>به زودی بر میگردیم</h2>
+				<h1>این صفحه در دست ساخت است</h1>
+				<h2>به زودی ساخته میشود </h2>
 			</div>
 		</section>
 		<script src="js/scripts.js"></script>
